frontend/test/should_pass/exectype_SetmapClear.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int>=set<int>{} && x.clear() || y:map<A,H>=map<A,H>{} && y.clear());
	}
}