frontend/test/should_fail/exectype_SetmapRem2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int> =set<int> && y:string="Gnampf!" && {x.rem(y)});
	}
}